# nlpf-1

./: README.md  sonar-project.properties
.github/workflows/: build-deploy.yml  build.yml  lint.yml
backend/: .env.local  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  dependencies.py  main.py
backend/app/account/: crud.py  models.py  router.py  schemas.py  util.py
backend/app/candidacies/: crud.py  models.py  router.py  schemas.py
backend/app/candidate/: crud.py  models.py  router.py  schemas.py
backend/app/company/: crud.py  models.py  router.py  schemas.py
backend/app/offer/: crud.py  models.py  router.py  schemas.py
backend/app/tests/: conftest.py  test_candidates.py  test_offers.py
backend/app/utils/: jwt.py  s3.py
backend/docker/: Dockerfile
backend/scripts/: populate_website.py
backend/src/: crud.py  database.py  main.py  models.py  schemas.py
backend/src/candidate/: crud.py  models.py  router.py  schemas.py
frontend/: .dockerignore  .prettierrc.json  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: button.tsx  candidacy-panel.tsx  checkbox.tsx  combobox.tsx  field.tsx  file-input.tsx  input.tsx  layout.tsx  loadingIcon.tsx  loginForm.tsx  modal.tsx  notifications.tsx  select-menu.tsx  textarea.tsx
frontend/src/context/: AuthContext.tsx  NotificationContext.tsx
frontend/src/hooks/: api-candidacy.ts  api-offer.ts
frontend/src/pages/: _app.tsx  _document.tsx  afterLogin.tsx  candidacies.tsx  index.tsx  offers.tsx  signup.tsx
frontend/src/pages/candidacies/: index.tsx
frontend/src/pages/candidacies/[candidacyId]/: index.tsx
frontend/src/pages/offers/: create.tsx  index.tsx  offers.tsx
frontend/src/pages/signup/: index.tsx  success.tsx
frontend/src/utils/: classNames.ts  fetch.ts
(+1 files in other folders)
